🛠️ fix timeline date clipping

--- a/client/src/styles/SidebarChart.css
+++ b/client/src/styles/SidebarChart.css
@@ -2,8 +2,8 @@ ul li.law-entry:not(:last-child) time::after {
   content: "";
   position: absolute;
   z-index: 1;
-  top: 0;
+  top: 25px;
   left: 50%;
   border-left: 3px dashed #0a95ab;
-  height: 100%;
+  height: calc(100% - 20px);
 }
